# TFFN-SOIQA

./: .gitignore  README.md  dlhf.py
SOIQA_TFFN/: README.md  pyproject.toml  requirements.txt
soiqa_v7/: README.md  pyproject.toml  requirements.txt
soiqa_v7/configs/: default.yaml
soiqa_v7/configs/ablations/: double_side_swmsa.yaml  ff_simple_concat.yaml  full.yaml  w_o_pdie.yaml  w_o_tpf_bd.yaml  w_o_tpf_bs.yaml
soiqa_v7/outputs/live3dvr_baseline/ablations/w_o_tpf_bd/: history.csv
soiqa_v7/outputs/live3dvr_baseline/ablations/w_o_tpf_bs/: train.csv
soiqa_v7/outputs/live3dvr_baseline/preds/: eval_analysis.json  eval_metrics.json  test_predictions.csv
soiqa_v7/outputs/solid_baseline/ablations/double_side_swmsa/: train_summary.json
soiqa_v7/outputs/solid_baseline/ablations/ff_simple_concat/: test.csv
soiqa_v7/outputs/solid_baseline/preds/: best_metrics.json  epoch_376_test_analysis.json
soiqa_v7/scripts/: _bootstrap.py  build_manifest.py  check_integrity.py  eval.py  prepare_data.py  smoke_test.py  split_manifest.py
soiqa_v7/src/soiqa_tffn/cli/: run_ablations.py  smoke_test.py  summarize_results.py
soiqa_v7/src/soiqa_tffn/engine/: checkpoint.py  trainer.py
soiqa_v7/src/soiqa_tffn/losses/: regression.py
soiqa_v7/src/soiqa_tffn/metrics/: __init__.py
soiqa_v7/src/soiqa_tffn/models/: __init__.py  norms.py  tffn.py
soiqa_v7/src/soiqa_tffn/models/backbones/: __init__.py  official_vmamba.py  resnet_stages.py
soiqa_v7/src/soiqa_tffn/models/blocks/: __init__.py  attention.py  ff.py  pdie.py
soiqa_v7/src/soiqa_tffn/utils/: io.py  paths.py
(+130 files in other folders)
